--- a/home.html
+++ b/home.html
@@ -55,7 +55,9 @@
             Me chamo Joao Victor Celestino Facanha.
             Tenho 19 anos, natural de Fortaleza, à mais ou menos 2 anos venho
             tentando ganhar a vida fazendo o que eu sei de melhor, cortar cabelo.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus laborum dicta beatae aliquid placeat a fugit nemo, consectetur ex similique sapiente ad. Harum vitae ipsam blanditiis. Atque suscipit sunt quis!
+            Disposto a dar um "tapa" no seu visual, me disponibilizo a ir até você.
+            Fique a vontade para entrar em contato comigo. 
+            
          </p>
         </aside>
           <article class="image">
