add pag agendamento

--- a/home.html
+++ b/home.html
@@ -18,8 +18,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="./home.html" class="header-brand">
-       
+    <a href="./home.html" class="header-brand"> 
       <img src="./img/logomobile.png"  alt="Logo Image" class="logomobile">  
     </a>
     <nav class="header-navbar">
@@ -54,7 +53,7 @@
             Tenho 19 anos, natural de Fortaleza, à mais ou menos 2 anos venho
             tentando ganhar a vida fazendo o que eu sei de melhor, cortar cabelo.
             Disposto a dar um "tapa" no seu visual, me disponibilizo a ir até você.
-            Fique a vontade para entrar em contato comigo. 
+            Fique à vontade para entrar em contato comigo. 
             
          </p>
         </aside>
