--- a/pages/contato.html
+++ b/pages/contato.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <a href="../home.html">  
-        Voltar
+        Início
     </a>
       <img src="../img/logomobile.png" alt="Logo Image" class="logomobile">
   </header>
