--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -24,7 +24,7 @@
         <ul>
             <li>
               <a href="../home.html">
-                Voltar 
+                Início 
               </a>
             </li>
             <li>
