--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     
 </head>
 <body>
-  <header class="header">
+  <header>
     <a href="./home.html" class="header-brand"> 
       <img src="./img/logomobile.png"  alt="Logo Image" class="logomobile">  
     </a>
@@ -49,7 +49,7 @@
          <h2>Barbeiro</h2>
          <p>
           <i class="fa-solid fa-user"></i> &nbsp;
-            Me chamo Joao Victor Celestino Facanha.
+            Me chamo Joao Victor Celestino Façanha.
             Tenho 19 anos, natural de Fortaleza, à mais ou menos 2 anos venho
             tentando ganhar a vida fazendo o que eu sei de melhor, cortar cabelo.
             Disposto a dar um "tapa" no seu visual, me disponibilizo a ir até você.
