--- a/pages/agendamento.html
+++ b/pages/agendamento.html
@@ -48,7 +48,7 @@
         <h1>Agende um Horário</h1>
         <hr>
         <p>Para agendar um horário, clique no botão abaixo.</p>
-        <a href="https://wa.me/5585992618797?text=Ol%C3%A1%2C+Gostaria+de+agendar+um+hor%C3%A1rio+para+corte+de+cabelo.+%F0%9F%98%83" target="_blank" class="btn">
+        <a href="https://wa.me/5585992618797?text=Ol%C3%A1%2C+Gostaria+de+agendar+um+hor%C3%A1rio+para+corte+de+cabelo." target="_blank" class="btn">
           <img src="../img/whatsapp-3.svg" alt="Whatsapp Image">
           Agendar
         </a>
